--- a/packages/flutter_tools/templates/plugin/android-kotlin.tmpl/src/main/kotlin/androidIdentifier/pluginClass.kt.tmpl
+++ b/packages/flutter_tools/templates/plugin/android-kotlin.tmpl/src/main/kotlin/androidIdentifier/pluginClass.kt.tmpl
@@ -1,6 +1,11 @@
 package {{androidIdentifier}}
 
+{{#androidX}}
 import androidx.annotation.NonNull
+{{/androidX}}
+{{^androidX}}
+import android.support.annotation.NonNull
+{{/androidX}}
 
 import io.flutter.embedding.engine.plugins.FlutterPlugin
 import io.flutter.plugin.common.MethodCall
