--- a/packages/flutter_tools/templates/module/android/library_new_embedding/Flutter.tmpl/build.gradle.tmpl
+++ b/packages/flutter_tools/templates/module/android/library_new_embedding/Flutter.tmpl/build.gradle.tmpl
@@ -43,3 +43,7 @@ android {
 flutter {
     source '../..'
 }
+
+dependencies {
+    implementation "com.android.support:support-annotations:28.0.0"
+}
