--- a/packages/flutter_tools/templates/plugin/android.tmpl/gradle.properties.tmpl
+++ b/packages/flutter_tools/templates/plugin/android.tmpl/gradle.properties.tmpl
@@ -1,3 +1,5 @@
 org.gradle.jvmargs=-Xmx1536M
-android.useAndroidX=false
+{{#androidX}}
+android.useAndroidX=true
 android.enableJetifier=true
+{{/androidX}}
